# icq26a

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml  test.yml  update-cask.yml
Casks/: icq26a.rb
docs/plans/: 2026-02-22-icq26a-mvp.md
ref/: icq-features.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  matrix_client.rs
src/components/: BrowseSpaces.svelte  BuddyList.svelte  ChatRoom.svelte  DirectMessage.svelte  FindUser.svelte  JoinRoom.svelte  Login.svelte  Preferences.svelte  PreferencesWindow.svelte  RoomInfo.svelte  ServerLog.svelte  StatusPicker.svelte  TitleBar.svelte  UserInfo.svelte  VerificationDialog.svelte
src/lib/: linkify.test.ts  linkify.ts  matrix.ts  notifications.ts  stores.ts  types.ts  windows.test.ts  windows.ts
