[package]
name = "icq26a"
version = "0.1.0"
description = "ICQ26a - Matrix chat client with ICQ98a aesthetic"
authors = ["you"]
edition = "2021"

[lib]
name = "icq26a_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
matrix-sdk = { version = "0.16", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
dirs = "6"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData"] }
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
